Fixed artifacts in unfocused navigation bar on Firefox 84

--- a/Minimize Right/userChrome.css
+++ b/Minimize Right/userChrome.css
@@ -1234,6 +1234,10 @@ toolbar > toolbaritem > menubar > menu[open] {
 @media (prefers-color-scheme: dark) {
 
 /* focus fix */
+#nav-bar:-moz-window-inactive {
+	background: linear-gradient(to bottom, rgba(255,255,255,0.08) 1px, transparent 1px, transparent 45px, rgba(255,255,255,0.05) 46px),
+	            linear-gradient(#3D3D3D, #3D3D3D) !important;
+}
 .tab-background[selected="true"]:-moz-window-inactive {
 	background: #3B3B3B !important;
 	box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.05), inset 0 0 1px 0 rgba(255,255,255,0) !important;
@@ -1263,6 +1267,13 @@ toolbar > toolbaritem > menubar > menu[open] {
 }
 
 /* elements DARK MODE */
+#nav-bar {
+    -moz-appearance: none !important;
+    border-radius: 3.5px 3.5px 0 0 !important;
+	background: linear-gradient(to right, #3C3C3C 0px, transparent 12px, transparent calc(100vw - 12px), #363636 100vw),
+	            linear-gradient(to bottom, rgba(255,255,255,0.08) 1px, transparent 1px, transparent 45px, rgba(255,255,255,0.05) 46px),
+	            linear-gradient(to bottom, #3C3C3C, #363636) !important;
+}
 #navigator-toolbox {
     appearance: -moz-window-titlebar !important;
 }
